Added images to the attractions page. Modified the book now button visually.

--- a/attractions.html
+++ b/attractions.html
@@ -105,41 +105,37 @@
                 </label>
             </div>
             <div class="attraction_container">
-                <div class="attraction border-animation">
-                    <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
+                <div class="attraction border-animation grow">
+                    <img src="/img/att1.jpg" alt="Attraction" />
+                    <div class="attraction_img_discr">Aenean lacinia, tortor sed semper hendrerit, mi ex suscipit velit, ac porttitor risus nibh eu neque. Ut sapien magna, ullamcorper eu nunc sit amet, tincidunt finibus enim. Pellentesque bibendum facilisis leo sit amet hendrerit. Aliquam in velit justo.</div>
                 </div>
-                <div class="attraction border-animation">
-                    <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
+                <div class="attraction border-animation grow">
+                    <img src="/img/att2.jpg" alt="Attraction" />
+                    <div class="attraction_img_discr">Aenean lacinia, tortor sed semper hendrerit, mi ex suscipit velit, ac porttitor risus nibh eu neque. Ut sapien magna, ullamcorper eu nunc sit amet, tincidunt finibus enim. Pellentesque bibendum facilisis leo sit amet hendrerit. Aliquam in velit justo.</div>
                 </div>
-                <div class="attraction border-animation">
-                    <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
+                <div class="attraction border-animation grow">
+                    <img src="/img/att3.jpg" alt="Attraction" />
+                    <div class="attraction_img_discr">Aenean lacinia, tortor sed semper hendrerit, mi ex suscipit velit, ac porttitor risus nibh eu neque. Ut sapien magna, ullamcorper eu nunc sit amet, tincidunt finibus enim. Pellentesque bibendum facilisis leo sit amet hendrerit. Aliquam in velit justo.</div>
                 </div>
-                <div class="attraction border-animation">
-                    <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
+                <div class="attraction border-animation grow">
+                    <img src="/img/att4.jpg" alt="Attraction" />
+                    <div class="attraction_img_discr">Aenean lacinia, tortor sed semper hendrerit, mi ex suscipit velit, ac porttitor risus nibh eu neque. Ut sapien magna, ullamcorper eu nunc sit amet, tincidunt finibus enim. Pellentesque bibendum facilisis leo sit amet hendrerit. Aliquam in velit justo.</div>
                 </div>
-                <div class="attraction border-animation">
-                    <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
+                <div class="attraction border-animation grow">
+                    <img src="/img/att5.jpg" alt="Attraction" />
+                    <div class="attraction_img_discr">Aenean lacinia, tortor sed semper hendrerit, mi ex suscipit velit, ac porttitor risus nibh eu neque. Ut sapien magna, ullamcorper eu nunc sit amet, tincidunt finibus enim. Pellentesque bibendum facilisis leo sit amet hendrerit. Aliquam in velit justo.</div>
                 </div>
-                <div class="attraction border-animation">
-                    <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
+                <div class="attraction border-animation grow">
+                    <img src="/img/att6.jpg" alt="Attraction" />
+                    <div class="attraction_img_discr">Aenean lacinia, tortor sed semper hendrerit, mi ex suscipit velit, ac porttitor risus nibh eu neque. Ut sapien magna, ullamcorper eu nunc sit amet, tincidunt finibus enim. Pellentesque bibendum facilisis leo sit amet hendrerit. Aliquam in velit justo.</div>
                 </div>
-                <div class="attraction border-animation">
-                    <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
+                <div class="attraction border-animation grow">
+                    <img src="/img/att7.jpeg" alt="Attraction" />
+                    <div class="attraction_img_discr">Aenean lacinia, tortor sed semper hendrerit, mi ex suscipit velit, ac porttitor risus nibh eu neque. Ut sapien magna, ullamcorper eu nunc sit amet, tincidunt finibus enim. Pellentesque bibendum facilisis leo sit amet hendrerit. Aliquam in velit justo.</div>
                 </div>
-                <div class="attraction border-animation">
-                    <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
-                </div>
-                <div class="attraction border-animation">
-                    <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
-                </div>
-                <div class="attraction border-animation">
-                    <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
-                </div>
-                <div class="attraction border-animation">
-                    <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
-                </div>
-                <div class="attraction border-animation">
-                    <img src="https://via.placeholder.com/240x240/A9A9A9?text=Attraction" alt="Attraction" />
+                <div class="attraction border-animation grow">
+                    <img src="/img/att9.jpg" alt="Attraction" />
+                    <div class="attraction_img_discr">Aenean lacinia, tortor sed semper hendrerit, mi ex suscipit velit, ac porttitor risus nibh eu neque. Ut sapien magna, ullamcorper eu nunc sit amet, tincidunt finibus enim. Pellentesque bibendum facilisis leo sit amet hendrerit. Aliquam in velit justo.</div>
                 </div>
             </div>        </section>
     </main>
