--- a/attractions.html
+++ b/attractions.html
@@ -78,7 +78,7 @@
             <h1>Awesome Attractions</h1>
             <p>Aenean lacinia, tortor sed semper hendrerit, mi ex suscipit velit, ac porttitor risus nibh eu neque. Ut sapien magna, ullamcorper eu nunc sit amet, tincidunt finibus enim. Pellentesque bibendum facilisis leo sit amet hendrerit. Aliquam in velit justo. Sed vestibulum velit elit, sit amet convallis eros lacinia quis. Phasellus quis ipsum finibus, pretium nulla non, semper ante. Praesent convallis augue vitae consectetur maximus. Integer porttitor augue eu quam posuere, eget pretium dolor facilisis. Donec vitae ex interdum, accumsan metus sed, mollis magna. Vivamus tortor lorem, consequat in ipsum a, accumsan faucibus arcu. Praesent dignissim purus id fermentum commodo. Integer porttitor in nibh vitae vestibulum.</p>
             <div class="filter_container">
-                <h4>Filter By</h4>
+                <h3>Filter By:</h3>
                 <label for="age">
                     Age: 
                     <select name="age" id="age">
@@ -105,39 +105,80 @@
                 </label>
             </div>
             <div class="attraction_container">
-                <div class="attraction border-animation grow">
-                    <img src="/img/att1.jpg" alt="Attraction" />
-                    <div class="attraction_img_discr">Aenean lacinia, tortor sed semper hendrerit, mi ex suscipit velit, ac porttitor risus nibh eu neque. Ut sapien magna, ullamcorper eu nunc sit amet, tincidunt finibus enim. Pellentesque bibendum facilisis leo sit amet hendrerit. Aliquam in velit justo.</div>
-                </div>
-                <div class="attraction border-animation grow">
-                    <img src="/img/att2.jpg" alt="Attraction" />
-                    <div class="attraction_img_discr">Aenean lacinia, tortor sed semper hendrerit, mi ex suscipit velit, ac porttitor risus nibh eu neque. Ut sapien magna, ullamcorper eu nunc sit amet, tincidunt finibus enim. Pellentesque bibendum facilisis leo sit amet hendrerit. Aliquam in velit justo.</div>
-                </div>
-                <div class="attraction border-animation grow">
-                    <img src="/img/att3.jpg" alt="Attraction" />
-                    <div class="attraction_img_discr">Aenean lacinia, tortor sed semper hendrerit, mi ex suscipit velit, ac porttitor risus nibh eu neque. Ut sapien magna, ullamcorper eu nunc sit amet, tincidunt finibus enim. Pellentesque bibendum facilisis leo sit amet hendrerit. Aliquam in velit justo.</div>
-                </div>
-                <div class="attraction border-animation grow">
-                    <img src="/img/att4.jpg" alt="Attraction" />
-                    <div class="attraction_img_discr">Aenean lacinia, tortor sed semper hendrerit, mi ex suscipit velit, ac porttitor risus nibh eu neque. Ut sapien magna, ullamcorper eu nunc sit amet, tincidunt finibus enim. Pellentesque bibendum facilisis leo sit amet hendrerit. Aliquam in velit justo.</div>
-                </div>
-                <div class="attraction border-animation grow">
-                    <img src="/img/att5.jpg" alt="Attraction" />
-                    <div class="attraction_img_discr">Aenean lacinia, tortor sed semper hendrerit, mi ex suscipit velit, ac porttitor risus nibh eu neque. Ut sapien magna, ullamcorper eu nunc sit amet, tincidunt finibus enim. Pellentesque bibendum facilisis leo sit amet hendrerit. Aliquam in velit justo.</div>
-                </div>
-                <div class="attraction border-animation grow">
-                    <img src="/img/att6.jpg" alt="Attraction" />
-                    <div class="attraction_img_discr">Aenean lacinia, tortor sed semper hendrerit, mi ex suscipit velit, ac porttitor risus nibh eu neque. Ut sapien magna, ullamcorper eu nunc sit amet, tincidunt finibus enim. Pellentesque bibendum facilisis leo sit amet hendrerit. Aliquam in velit justo.</div>
-                </div>
-                <div class="attraction border-animation grow">
-                    <img src="/img/att7.jpeg" alt="Attraction" />
-                    <div class="attraction_img_discr">Aenean lacinia, tortor sed semper hendrerit, mi ex suscipit velit, ac porttitor risus nibh eu neque. Ut sapien magna, ullamcorper eu nunc sit amet, tincidunt finibus enim. Pellentesque bibendum facilisis leo sit amet hendrerit. Aliquam in velit justo.</div>
-                </div>
-                <div class="attraction border-animation grow">
-                    <img src="/img/att9.jpg" alt="Attraction" />
-                    <div class="attraction_img_discr">Aenean lacinia, tortor sed semper hendrerit, mi ex suscipit velit, ac porttitor risus nibh eu neque. Ut sapien magna, ullamcorper eu nunc sit amet, tincidunt finibus enim. Pellentesque bibendum facilisis leo sit amet hendrerit. Aliquam in velit justo.</div>
-                </div>
-            </div>        </section>
+                <div class="gallery">
+                    <img src="img/attraction/img-1.jpg" alt="pirate attraction">
+                    <div class="rides">
+                        <h2>Ahoy There</h2>
+                    </div>
+                </div>    
+                <div class="gallery">        
+                    <img src="img/attraction/img-2.jpg" alt="swinging boat attraction"/>
+                    <div class="rides">
+                        <h2>Swinging Boat Ride</h2>
+                    </div>
+                </div>    
+                <div class="gallery">        
+                    <img src="img/attraction/img-3.jpg" alt="pirates voyage attraction"/>
+                    <div class="rides">
+                        <h2>Pirates Voyage</h2>
+                    </div>
+                </div>    
+                <div class="gallery">       
+                    <img src="img/attraction/img-4.jpg" alt="pirates cove"/>
+                    <div class="rides">
+                        <h2>Pirates Cove Pool Park</h2>
+                    </div>
+                </div>    
+                <div class="gallery">    
+                    <img src="img/attraction/img-5.jpg" alt="pirates dungeon attraction"/>
+                    <div class="rides">
+                        <h2>The Dungeons</h2>
+                    </div>
+                </div>    
+                <div class="gallery">   
+                    <img src="img/attraction/img-6.jpg" alt="vr attraction"/>
+                    <div class="rides">
+                        <h2>Virtual Reality Coaster</h2>
+                    </div>
+                </div>    
+                <div class="gallery">   
+                    <img src="img/attraction/img-7.jpg" alt="log flume"/>
+                    <div class="rides">
+                        <h2>Ride the Flumes</h2>
+                    </div>
+                </div>    
+                <div class="gallery">  
+                    <img src="img/attraction/img-8.jpg" alt="treasure hunt"/>
+                    <div class="rides">
+                        <h2>Treasure Hunt</h2>
+                    </div>
+                </div>    
+                <div class="gallery">   
+                    <img src="img/attraction/img-9.jpg" alt="pirate attack"/>
+                    <div class="rides">
+                        <h2>Pirate Attack</h2>
+                    </div>
+                </div>    
+                <div class="gallery">   
+                    <img src="img/attraction/img-10.jpg" alt="boat ride"/>
+                    <div class="rides">
+                        <h2>Jolly Roger rides again</h2>
+                    </div>
+                </div>    
+                <div class="gallery">  
+                    <img src="img/attraction/img-11.jpg" alt="water canons"/>
+                    <div class="rides">
+                        <h2>Water Canons</h2>
+                    </div>
+                </div>    
+                <div class="gallery">   
+                    <img src="img/attraction/img-12.jpg" alt="save the pirates"/>
+                    <div class="rides">
+                        <h2>Save Us!</h2>
+                    </div>
+                </div>       
+            </div>        
+        </section>
     </main>
     <footer>
         <div class="inner">
