Added generic box border class, Removed unused animations, Styled home page events, Removed orphaned images

--- a/index.html
+++ b/index.html
@@ -73,31 +73,31 @@
         
         <div class="carousel">
             <div class="inner">
-                <div class="item">
+                <div class="item box">
                     <div class="content">
                         <h3>Great Rides!</h3>
                         <img src="img/carousel/people-on-a-ride-2461841.jpg" alt="Pirate ship ride" />
                     </div>
                 </div>
-                <div class="item">
+                <div class="item box">
                     <div class="content">
                         <h3>An Amazing Outing!</h3>
                         <img src="img/carousel/woman-standing-while-laughing-near-yellow-ride-poster-1906839.jpg" alt="Fun times" />
                     </div>
                 </div>
-                <div class="item">
+                <div class="item box">
                     <div class="content">
                         <h3>Fun For The Whole Family!</h3>
                         <img src="img/carousel/ckturistando-HTCQCvwV9XY-unsplash.jpg" alt="Family swings" />
                     </div>
                 </div>
-                <div class="item">
+                <div class="item box">
                     <div class="content">
                         <h3>Ferris Wheel Fun!</h3>
                         <img src="img/carousel/black-and-white-ferris-wheel-1782146.jpg" alt="Ferris wheel" />
                     </div>
                 </div>
-                <div class="item">
+                <div class="item box">
                     <div class="content">
                         <h3>Ferris Wheel Fun!</h3>
                         <img src="img/carousel/white-and-yellow-roller-coaster-749064.jpg" alt="Roller coaster" />
@@ -115,11 +115,17 @@
         </div>
         
         <div class="event_container">
-            <div class="event current grow">
-                <img src="https://via.placeholder.com/590x400?text=Current+Events" alt="Image two" />
+            <div class="event current">
+                <div class="content">
+                    <h3>What's Happening Now</h3>
+                    <img src="img/carousel/giant-decorative-apple-on-roof-of-stall-on-colorful-new-year-3810900.jpg" alt="Concessions" />
+                </div>
             </div>
-            <div class="event upcoming grow">
-                <img src="https://via.placeholder.com/590x400?text=Upcoming+Events" alt="Image three" />
+            <div class="event upcoming">
+                <div class="content">
+                    <h3>Exciting Upcoming Events</h3>
+                    <img src="img/carousel/woman-standing-while-laughing-near-yellow-ride-poster-1906839.jpg" alt="Fun times" />    
+                </div>
             </div>
         </div>
     </main>
