Modifed the tickets to be a little bit more responsive. Visual updates to them

--- a/tickets.html
+++ b/tickets.html
@@ -74,24 +74,42 @@
             <p>Aenean lacinia, tortor sed semper hendrerit, mi ex suscipit velit, ac porttitor risus nibh eu neque. Ut sapien magna, ullamcorper eu nunc sit amet, tincidunt finibus enim. Pellentesque bibendum facilisis leo sit amet hendrerit. Aliquam in velit justo. Sed vestibulum velit elit, sit amet convallis eros lacinia quis. Phasellus quis ipsum finibus, pretium nulla non, semper ante. Praesent convallis augue vitae consectetur maximus. Integer porttitor augue eu quam posuere, eget pretium dolor facilisis. Donec vitae ex interdum, accumsan metus sed, mollis magna. Vivamus tortor lorem, consequat in ipsum a, accumsan faucibus arcu. Praesent dignissim purus id fermentum commodo. Integer porttitor in nibh vitae vestibulum.</p>
             <div class="ticket_container">
                 <div class="ticket ticket-bronze">
-                    <h3>Bronze Ticket</h3>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque cursus malesuada tortor eu rutrum. Praesent sapien mi, volutpat quis ipsum sed, tincidunt interdum arcu. Pellentesque in est in nibh pellentesque accumsan. Nullam rutrum ex sed scelerisque accumsan. Vivamus porta purus sem, sed feugiat ligula hendrerit vitae. Quisque vel mi ut odio dapibus vehicula at ac tortor. Nam ligula nunc, mattis ut lacinia et, iaculis at dolor. Sed congue nunc malesuada leo porttitor finibus.
-                    </p>
+                    <h2>Bronze ticket</h2>
+                    <div class="price">
+                        <h3>15$</h3>
+                    </div>
+                    <div class="features">
+                        <h4>Lorem ipsum dolor sit, amet consectetur</h4>
+                        <h4>Lorem ipsum dolor sit, amet consectetur</h4>
+                        <h4>Lorem ipsum dolor sit, amet consectetur</h4>
+                        <h4>Lorem ipsum dolor sit, amet consectetur</h4>
+                    </div>
                     <button class="ticket-buy-btn">Buy Now</button>
                 </div>
                 <div class="ticket ticket-silver">
-                    <h3>Silver Ticket</h3>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque cursus malesuada tortor eu rutrum. Praesent sapien mi, volutpat quis ipsum sed, tincidunt interdum arcu. Pellentesque in est in nibh pellentesque accumsan. Nullam rutrum ex sed scelerisque accumsan. Vivamus porta purus sem, sed feugiat ligula hendrerit vitae. Quisque vel mi ut odio dapibus vehicula at ac tortor. Nam ligula nunc, mattis ut lacinia et, iaculis at dolor. Sed congue nunc malesuada leo porttitor finibus.
-                    </p>
+                    <h2>Silver ticket</h2>
+                    <div class="price">
+                        <h3>25$</h3>
+                    </div>
+                    <div class="features">
+                        <h4>Lorem ipsum dolor sit, amet consectetur</h4>
+                        <h4>Lorem ipsum dolor sit, amet consectetur</h4>
+                        <h4>Lorem ipsum dolor sit, amet consectetur</h4>
+                        <h4>Lorem ipsum dolor sit, amet consectetur</h4>
+                    </div>
                     <button class="ticket-buy-btn">Buy Now</button>
                 </div>
                 <div class="ticket ticket-gold">
-                    <h3>Gold Ticket</h3>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque cursus malesuada tortor eu rutrum. Praesent sapien mi, volutpat quis ipsum sed, tincidunt interdum arcu. Pellentesque in est in nibh pellentesque accumsan. Nullam rutrum ex sed scelerisque accumsan. Vivamus porta purus sem, sed feugiat ligula hendrerit vitae. Quisque vel mi ut odio dapibus vehicula at ac tortor. Nam ligula nunc, mattis ut lacinia et, iaculis at dolor. Sed congue nunc malesuada leo porttitor finibus.
-                    </p>
+                    <h2>Gold ticket</h2>
+                    <div class="price">
+                        <h3>40$</h3>
+                    </div>
+                    <div class="features">
+                        <h4>Lorem ipsum dolor sit, amet consectetur</h4>
+                        <h4>Lorem ipsum dolor sit, amet consectetur</h4>
+                        <h4>Lorem ipsum dolor sit, amet consectetur</h4>
+                        <h4>Lorem ipsum dolor sit, amet consectetur</h4>
+                    </div>
                     <button class="ticket-buy-btn">Buy Now</button>
                 </div>
             </div>
