Updated heading tags as per W3C standards, Updated lang attribute as per W3C standard

--- a/tickets.html
+++ b/tickets.html
@@ -1,6 +1,6 @@
 <!doctype html>
 
-<html lang="en">
+<html lang="zxx">
 <head>
   <meta charset="utf-8">
 
@@ -70,7 +70,7 @@
     </header>
     <main class="tickets">
         <section>
-            <h1>Buy Tickets</h1>
+            <h2>Buy Tickets</h2>
             <p>Aenean lacinia, tortor sed semper hendrerit, mi ex suscipit velit, ac porttitor risus nibh eu neque. Ut sapien magna, ullamcorper eu nunc sit amet, tincidunt finibus enim. Pellentesque bibendum facilisis leo sit amet hendrerit. Aliquam in velit justo. Sed vestibulum velit elit, sit amet convallis eros lacinia quis. Phasellus quis ipsum finibus, pretium nulla non, semper ante. Praesent convallis augue vitae consectetur maximus. Integer porttitor augue eu quam posuere, eget pretium dolor facilisis. Donec vitae ex interdum, accumsan metus sed, mollis magna. Vivamus tortor lorem, consequat in ipsum a, accumsan faucibus arcu. Praesent dignissim purus id fermentum commodo. Integer porttitor in nibh vitae vestibulum.</p>
             <div class="ticket_container">
                 <div class="ticket ticket-bronze">
